Fix margin on the showcase on mobile.

--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -7,7 +7,7 @@
 	transition: height 300ms ease-in-out;
 	background: #eee;
 	z-index: 0;
-	margin-top: -40px;
+	margin-top: 0;
 
 	@include respond-to( 768px ) {
 		margin-top: -60px;
